--- a/amazon_phone_reviews.ipynb
+++ b/amazon_phone_reviews.ipynb
@@ -12,6 +12,189 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'amazon_data_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-34bf54acfa67>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#transform csv to data frame\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mamazon_product_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproduct_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mamazon_data_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'amazon_data_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#read in product csv\n",
+    "product_file = \"amazon_products.csv\"\n",
+    "#transform csv to data frame \n",
+    "amazon_product_df = pd.read_csv(product_file)\n",
+    "amazon_pri_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>asin</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>title</th>\n",
+       "      <th>url</th>\n",
+       "      <th>image</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>reviewUrl</th>\n",
+       "      <th>totalReviews</th>\n",
+       "      <th>price</th>\n",
+       "      <th>originalPrice</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>B0000SX2UC</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Dual-Band / Tri-Mode Sprint PCS Phone w/ Voice...</td>\n",
+       "      <td>https://www.amazon.com/Dual-Band-Tri-Mode-Acti...</td>\n",
+       "      <td>https://m.media-amazon.com/images/I/2143EBQ210...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>https://www.amazon.com/product-reviews/B0000SX2UC</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B0009N5L7K</td>\n",
+       "      <td>Motorola</td>\n",
+       "      <td>Motorola I265 phone</td>\n",
+       "      <td>https://www.amazon.com/Motorola-i265-I265-phon...</td>\n",
+       "      <td>https://m.media-amazon.com/images/I/419WBAVDAR...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>https://www.amazon.com/product-reviews/B0009N5L7K</td>\n",
+       "      <td>7</td>\n",
+       "      <td>49.95</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>B000SKTZ0S</td>\n",
+       "      <td>Motorola</td>\n",
+       "      <td>MOTOROLA C168i AT&amp;T CINGULAR PREPAID GOPHONE C...</td>\n",
+       "      <td>https://www.amazon.com/MOTOROLA-C168i-CINGULAR...</td>\n",
+       "      <td>https://m.media-amazon.com/images/I/71b+q3ydkI...</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>https://www.amazon.com/product-reviews/B000SKTZ0S</td>\n",
+       "      <td>22</td>\n",
+       "      <td>99.99</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>B001AO4OUC</td>\n",
+       "      <td>Motorola</td>\n",
+       "      <td>Motorola i335 Cell Phone Boost Mobile</td>\n",
+       "      <td>https://www.amazon.com/Motorola-i335-Phone-Boo...</td>\n",
+       "      <td>https://m.media-amazon.com/images/I/710UO8gdT+...</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>https://www.amazon.com/product-reviews/B001AO4OUC</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>B001DCJAJG</td>\n",
+       "      <td>Motorola</td>\n",
+       "      <td>Motorola V365 no contract cellular phone AT&amp;T</td>\n",
+       "      <td>https://www.amazon.com/Motorola-V365-contract-...</td>\n",
+       "      <td>https://m.media-amazon.com/images/I/61LYNCVrrK...</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>https://www.amazon.com/product-reviews/B001DCJAJG</td>\n",
+       "      <td>12</td>\n",
+       "      <td>149.99</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         asin     brand                                              title  \\\n",
+       "0  B0000SX2UC       NaN  Dual-Band / Tri-Mode Sprint PCS Phone w/ Voice...   \n",
+       "1  B0009N5L7K  Motorola                                Motorola I265 phone   \n",
+       "2  B000SKTZ0S  Motorola  MOTOROLA C168i AT&T CINGULAR PREPAID GOPHONE C...   \n",
+       "3  B001AO4OUC  Motorola              Motorola i335 Cell Phone Boost Mobile   \n",
+       "4  B001DCJAJG  Motorola      Motorola V365 no contract cellular phone AT&T   \n",
+       "\n",
+       "                                                 url  \\\n",
+       "0  https://www.amazon.com/Dual-Band-Tri-Mode-Acti...   \n",
+       "1  https://www.amazon.com/Motorola-i265-I265-phon...   \n",
+       "2  https://www.amazon.com/MOTOROLA-C168i-CINGULAR...   \n",
+       "3  https://www.amazon.com/Motorola-i335-Phone-Boo...   \n",
+       "4  https://www.amazon.com/Motorola-V365-contract-...   \n",
+       "\n",
+       "                                               image  rating  \\\n",
+       "0  https://m.media-amazon.com/images/I/2143EBQ210...     3.0   \n",
+       "1  https://m.media-amazon.com/images/I/419WBAVDAR...     3.0   \n",
+       "2  https://m.media-amazon.com/images/I/71b+q3ydkI...     2.7   \n",
+       "3  https://m.media-amazon.com/images/I/710UO8gdT+...     3.3   \n",
+       "4  https://m.media-amazon.com/images/I/61LYNCVrrK...     3.1   \n",
+       "\n",
+       "                                           reviewUrl  totalReviews   price  \\\n",
+       "0  https://www.amazon.com/product-reviews/B0000SX2UC            14    0.00   \n",
+       "1  https://www.amazon.com/product-reviews/B0009N5L7K             7   49.95   \n",
+       "2  https://www.amazon.com/product-reviews/B000SKTZ0S            22   99.99   \n",
+       "3  https://www.amazon.com/product-reviews/B001AO4OUC            21    0.00   \n",
+       "4  https://www.amazon.com/product-reviews/B001DCJAJG            12  149.99   \n",
+       "\n",
+       "   originalPrice  \n",
+       "0            0.0  \n",
+       "1            0.0  \n",
+       "2            0.0  \n",
+       "3            0.0  \n",
+       "4            0.0  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#read in reviews csv\n",
+    "review_file = \"amazon_reviews.csv\"\n",
+    "#transform csv to dataframe \n",
+    "amazon_review_df = pd.read_csv(review_file)\n",
+    "amazon_review_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -161,9 +344,9 @@
     }
    ],
    "source": [
-    "csv_file = \"../ETL_project/amazon_products.csv\"\n",
-    "amazon_data_df = pd.read_csv(csv_file)\n",
-    "amazon_data_df.head()"
+    "product_file = \"amazon_products.csv\"\n",
+    "amazon_product_df = pd.read_csv(product_file)\n",
+    "amazon_product_df.head()"
    ]
   },
   {
@@ -176,9 +359,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pythondata] *",
+   "display_name": "Python [conda env:PythonData] *",
    "language": "python",
-   "name": "conda-env-pythondata-py"
+   "name": "conda-env-PythonData-py"
   },
   "language_info": {
    "codemirror_mode": {
